--- a/Debug/makefile
+++ b/Debug/makefile
@@ -12,6 +12,7 @@ GEN_CMDS__FLAG :=
 ORDERED_OBJS += \
 "./i2c.obj" \
 "./main.obj" \
+"./motor_driver.obj" \
 "./mpu9250.obj" \
 "./quaternionFilters.obj" \
 "./startup_msp432p401r_ccs.obj" \
@@ -157,8 +158,8 @@ PI.hex: $(EXE_OUTPUTS)
 # Other Targets
 clean:
 	-$(RM) $(EXE_OUTPUTS__QUOTED)$(BIN_OUTPUTS__QUOTED)
-	-$(RM) "i2c.d" "main.d" "mpu9250.d" "quaternionFilters.d" "startup_msp432p401r_ccs.d" "system_msp432p401r.d" 
-	-$(RM) "i2c.obj" "main.obj" "mpu9250.obj" "quaternionFilters.obj" "startup_msp432p401r_ccs.obj" "system_msp432p401r.obj" 
+	-$(RM) "i2c.d" "main.d" "motor_driver.d" "mpu9250.d" "quaternionFilters.d" "startup_msp432p401r_ccs.d" "system_msp432p401r.d" 
+	-$(RM) "i2c.obj" "main.obj" "motor_driver.obj" "mpu9250.obj" "quaternionFilters.obj" "startup_msp432p401r_ccs.obj" "system_msp432p401r.obj" 
 	-@echo 'Finished clean'
 	-@echo ' '
 
